--- a/HTML Files/Menu.html
+++ b/HTML Files/Menu.html
@@ -28,11 +28,11 @@
                 <span class="quantity">0</span>
             </div>
         </header>
-        <div class="list"></div>
+        <div class="Menu"></div>
     </div>
     <div class="cart-popup"> <!-- Content of the cart popup goes here -->
         <h2>Shopping Cart</h2>
-        <ul class="ListCard"></ul>
+        <ul class="MenuItems"></ul>
         <div class="checkout">
             <div class="total">0</div>
             <div class="closeShopping">Close</div> <!-- Changed class name to "closeShopping" -->
